--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "author": "github.com/RomanDavlyatshin",
   "license": "Apache 2.0",
   "dependencies": {
-    "commander": "^7.2.0",
-    "fs-extra": "^9.1.0",
-    "upath": "^2.0.1"
+    "@actions/core": "^1.6.0",
+    "@actions/github": "^5.0.0",
+    "@octokit/core": "^3.5.1",
+    "dayjs": "^1.10.7",
+    "semver": "^7.3.5"
   },
   "devDependencies": {
-    "@types/fs-extra": "^9.0.1",
+    "@types/node": "^16.11.7",
+    "@types/semver": "^7.3.9",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "awesome-typescript-loader": "^5.2.1",
     "eslint-config-airbnb-base": "^14.2.0",
